2005-04-06  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	- https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=144052

	* server-src/amverifyrun.sh.in: Filter changer log file.

2005-04-06  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amcheck.c: Improve messages.

2005-04-06  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/sendsize.c (generic_calc_estimates): Use amname instead
	  of dirname in message.

2005-03-29  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/conffile.h: Rename getcont_unit_divisor to
	  getconf_unit_divisor.
	* server-src/amadmin.c: Use getconf_unit_divisor.
	* server-src/amcheck.c: Use getconf_unit_divisor.
	* server-src/conffile.c: Use getconf_unit_divisor.
	* server-src/conffile.c (unit_divisor): Init to 1.
	* server-src/reporter.c: Use getconf_unit_divisor. The mb macro always
	  divide by 1024. Add the du macro. Use mb or du where appropriate.

2005-03-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/infofile.h (history_t): Add secs field.
	* server-src/infofile.c (read_txinfofile): Parse info file with secs
	  in history.
	* server-src/infofile.c (write_txinfofile): Write secs in history.
	* server-src/driverio.c (update_info_dumper): Update secs in history.

2005-03-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/planner.c: Improve server estimate.
	* server-src/planner.c: Write server estimate like others estimate.

2005-02-14  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: last_level is negative, on new disk.

2005-02-09  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: Use '-?' to match negative values
	  instead of '-*'.

2005-02-09  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Orion Poplawski <orion@cora.nwra.com>

	* server-src/amoverview.pl.in: Print the total number of level 0
	  dumps for each disk and the number of runs until the last level 0