@@ -1,3 +1,8 @@
+2005-04-14  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+
+	* changer-src/chg-zd-mtx.sh.in: Improve handling of
+	  "Unknown Storage Element Loaded".
+
 2005-04-06  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 	- https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=144052
 
